fixed styling issues especially on mobile

--- a/css/apps/mail/mail-app.css
+++ b/css/apps/mail/mail-app.css
@@ -64,4 +64,8 @@
     margin-bottom: 22px;
     margin-top: 10px;
   }
+
+  .btn-compose {
+    margin-top: 8px;
+  }
 }
