--- a/css/apps/mail/mail-preview.css
+++ b/css/apps/mail/mail-preview.css
@@ -34,6 +34,7 @@
 
     .read-unread-checkbox {
         align-self: flex-start;
+        margin-top: 7px;
     }
 
     .mail-preview-actions {
