--- a/css/main.css
+++ b/css/main.css
@@ -191,7 +191,7 @@ h1 {
 
 @media (max-width: 750px) {
   .about-page-image {
-    width: 226px;
+    width: 250px;
   }
   .app-footer {
     padding-top: 9px;
